[gd_scene load_steps=55 format=2]

[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Trampa.tscn" type="PackedScene" id=1]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Lanzallamas.gd" type="Script" id=2]
[ext_resource path="res://RECURSOS/IMAGENES/TRAMPAS/Hoja De Sprite.png" type="Texture" id=3]
[ext_resource path="res://SISTEMA/GLOBAL/AREAS/AreaDamage.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Particle02.png" type="Texture" id=6]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Animaciones/apagar.tres" type="Animation" id=7]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Animaciones/flamear.tres" type="Animation" id=8]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Animaciones/encender.tres" type="Animation" id=9]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Animaciones/stand.tres" type="Animation" id=10]
[ext_resource path="res://RECURSOS/SONIDOS/EFECTOS/lanzallamas_flamear.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 32, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 32, 256, 32, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 64, 256, 32, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 96, 256, 32, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 32, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 160, 256, 32, 128 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 160, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 192, 512, 32, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 640, 32, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 640, 32, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 640, 32, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 160, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 224, 128, 32, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 32, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 32, 384, 32, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 64, 384, 32, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 96, 384, 32, 128 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 0, 640, 32, 128 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 32, 640, 32, 128 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 64, 640, 32, 128 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "apagar",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "cargando",
"speed": 50.0
}, {
"frames": [ SubResource( 8 ), SubResource( 8 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "encender",
"speed": 15.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "flamear",
"speed": 20.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaDamage:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaDamage/CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaDamage/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -31 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.23 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light2D:texture_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Light2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -102 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Light2D:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Light2D:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.882353, 0.0392157, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Light2D:texture")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "cargando"
length = 0.14
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38 ]
}

[sub_resource type="RectangleShape2D" id=49]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 14, 8.5 )

[node name="Lanzallamas" instance=ExtResource( 1 )]
script = ExtResource( 2 )
tiempo_reposo = 8.0
tiempo_llamas = 2.0
tiempo_de_carga = 0.85
tiempo_arranque = 4.0

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -64 )
texture = ExtResource( 3 )
hframes = 8
vframes = 6
frame = 24

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]
visible = false
position = Vector2( 0, -64 )
frames = SubResource( 18 )
animation = "stand"
frame = 5
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 40 )
anims/apagar = ExtResource( 7 )
anims/cargando = SubResource( 43 )
anims/encender = ExtResource( 9 )
anims/flamear = ExtResource( 8 )
anims/stand = ExtResource( 10 )

[node name="AreaDamage" type="Area2D" parent="." index="4"]
collision_layer = 0
input_pickable = false
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage" index="0"]
position = Vector2( 0, -31 )
shape = SubResource( 49 )

[node name="KinematicBody2D" type="StaticBody2D" parent="." index="5"]
visible = false
modulate = Color( 0, 0.27451, 1, 1 )
collision_layer = 512
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]
position = Vector2( 0, -8.5 )
shape = SubResource( 48 )

[node name="Light2D" type="Light2D" parent="." index="6"]
position = Vector2( 0, -102 )
texture = ExtResource( 6 )
texture_scale = 0.2
color = Color( 0.984314, 0.882353, 0.0392157, 1 )
energy = 1.23
range_layer_max = 10

[node name="Sprite2" type="Sprite" parent="." index="7"]
visible = false
position = Vector2( 7, -128 )
scale = Vector2( 6.78125, 5.03125 )
z_index = -1
texture = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 11 )
max_distance = 500.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaDamage" to="AreaDamage" method="_on_AreaDamage_body_entered"]
